# scripts

./: README.md  template.spec.md
aludoa/: README.md
ctech/: check_stdcell_verilog.pl
ctech/prep-tech/: .gitignore  README.md  prep_tech.input.md  prep_tech.spec.md  pyproject.toml
ctech/prep-tech/tests/: test_discover.py  test_generate.py  test_validate.py
dtswiki/: 1713.18ww09c.git.txt.wiki  1713.18ww09c.history.txt  1713.18ww09c.history.txt.wiki  1713.18ww09c.latest.txt  1713.18ww09c.latest.txt.wiki  1713.18ww09c.techhistory.txt  1713.18ww09c.techhistory.txt.wiki  1713.18ww15g.techhistory.txt  1713.18ww15g.techhistory.txt.wiki  1713.18ww15g.techlatest.txt  1713.18ww15g.techlatest.txt.wiki  1713.18ww15g.toolhistory.txt  1713.18ww15g.toolhistory.txt.wiki  1713.18ww15g.toollatest.txt  1713.18ww15g.toollatest.txt.wiki  1713plus.18ww04b.git.wiki  1713plus.18ww04b.history.wiki  1713plus.18ww04b.latest.wiki  1713plus.18ww04b.techhistory.wiki  1713plus.18ww09c.git.txt.wiki  1713plus.18ww09c.history.txt.wiki  1713plus.18ww09c.latest.txt.wiki  1713plus.18ww09c.techhistory.txt.wiki  1713plus.18ww15g.techhistory.txt.wiki  1713plus.18ww15g.toolhistory.txt.wiki  1713plus.18ww15g.toollatest.txt.wiki  1813.18ww09c.git.txt  1813.18ww09c.git.txt.wiki  1813.18ww09c.history.txt  1813.18ww09c.history.txt.wiki  1813.18ww09c.latest.txt  1813.18ww09c.latest.txt.wiki  1813.18ww09c.techhistory.txt  1813.18ww09c.techhistory.txt.wiki  1813.18ww13d.git.txt  1813.18ww13d.git.txt.wiki  1813.18ww15g.git.wiki  1813.18ww15g.techhistory.txt  1813.18ww15g.techhistory.txt.wiki  (+9 more)
hsd/: attach.pl  (+6 more)
(+666 files in other folders)
