[tool.poetry]
name = "prep-tech"
version = "0.1.0"
description = "Cheetah process technology list files preparation for ctech and synthesis."
authors = ["mroha <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"